--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <script>
             const pages = [
                 {
-                    "name": "Tools",
+                    "name": "Shop",
                     "pages": [
                         {
-                            "name": "Oculus API APP Versions",
-                            "description": "Download any version of any oculus app",
-                            "img": "https://yt3.ggpht.com/ytc/AKedOLQrUa3upglNPaZkTA7dt8pzMBXBKroJZf1a0bE0fw=s900-c-k-c0x00ffffff-no-rj",
+                            "name": "Basketball",
+                            "description": "",
+                            "img": "",
                             "color": "#11aa22",
                             "url": "tools/Oculus/AppVersions.html"
                         },
@@ -40,13 +40,7 @@
                             "img": "assets/CE_512px.png",
                             "color": "#EEEEEE",
                             "url": "tools/Beat_Saber/ScoreConverter.html"
-                        },
-                        {
-                            "name": "APK Downgrader",
-                            "description": "Change your APKs via diff patching (outdated for Quest apps)",
-                            "img": "assets/CE_512px.png",
-                            "color": "#EEEEEE",
-                            "url": "tools/APK_Downgrader_Web/APKDowngrader.html"
+                            
                         }
                     ]
                 },
