--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         {
                             "name": "Basketball",
                             "description": "",
-                            "img": "",
+                            "img": "assets/basketball.png",
                             "color": "#11aa22",
                             "url": "tools/Oculus/AppVersions.html"
                         },
