--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script src="../js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
-            <div style="flex: 1; background-color: #2F3136; padding: 10px; text-align: center;">
+            <div style="flex: 1; background-color: #FFFFFF; padding: 10px; text-align: center;">
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
                     
