--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Bounce</title>
-     
     </head>
     <body>
+        <body style="background-color:#2F2924;">
         <script src="../js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
             <div style="flex: 1; background-color: #2F2924; padding: 10px; text-align: center;">
