--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <body style="background-color:#2F2924;">
-        <script src="../js/standard.js"></script>
+        <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
             <div style="flex: 1; background-color: #2F2924; padding: 10px; text-align: center;">
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
