--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bounce</title>
+        <title>Bounce Store!</title>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-        <link href="css/standard.css" type="text/css" rel="stylesheet">
-        <link rel="icon" href="assets/CE_64px.png" type="image/x-icon">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <body style="background-color:#2F2924;">
+        <body style="background-color:#EEEEEE;">
         <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
-            <div style="flex: 1; background-color: #2F2924; padding: 10px; text-align: center;">
+            <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
                     
