--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <body style="background-color:#EEEEEE;">
+        <body style="background-color:#252220;">
         <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
-            <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
+            <div style="flex: 1; background-color: #252220; padding: 10px; text-align: center;">
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
                     
@@ -22,10 +22,10 @@
                     "pages": [
                         {
                             "name": "Basketball",
-                            "description": "",
+                            "description": "Buy our basketballs!",
                             "img": "assets/index1.png",
                             "color": "#2F2924",
-                            "url": "tools/Oculus/AppVersions.html"
+                            "url": "tools/basketball.html"
                         },
                         
                         {
