--- a/tools/basketball.html
+++ b/tools/basketball.html
@@ -2,9 +2,14 @@
 <html>
     <head>
   <title>Basketballs!</title>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
             <body style="background-color:#252220;">
-              
+                      <script src="/js/standard.js"></script>
+        <div style="padding-top: 10px; width: 100%; display: flex;">
+            <div style="flex: 1; background-color: #252220; padding: 10px; text-align: center;">
+                <div style="font-size: 24px; text-align: center;">Bounce</div>
+                <div id="categoryContainer" style="margin-top: 10px;">
      </body>
 </html>
