--- a/tools/basketball.html
+++ b/tools/basketball.html
@@ -9,7 +9,7 @@
                       <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
             <div style="flex: 1; background-color: #252220; padding: 10px; text-align: center;">
-                <div style="font-size: 24px; text-align: center;">Bounce</div>
+                <div style="font-size: 24px; text-align: center;">Error 404 Page Does Not Exist</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
      </body>
 </html>
