--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                             "name": "Basketball",
                             "description": "Buy our basketballs!",
                             "img": "assets/index1.png",
-                            "color": "#2F2924",
+                            "color": "#EEEEEE",
                             "url": "tools/basketball.html"
                         },
                         
                         {
-                            "name": "Streamer tools overlays",
-                            "description": "Overlays for the streamer tools Beat Saber mod",
-                            "img": "assets/CE_512px.png",
-                            "color": "#2F2924",
-                            "url": "tools/Streamer_Tools_Quest_Overlay/index.html"
+                            "name": "Basketball hoops",
+                            "description": "Buy our basketball hoops!",
+                            "img": "assets/hoop.png",
+                            "color": "#EEEEEE",
+                            "url": "tools/Basketballhoops.html"
                         },
                         {
                             "name": "Quest Beat Saber Score converter",
