--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             "name": "Basketball",
                             "description": "Buy our basketballs!",
                             "img": "assets/index1.png",
-                            "color": "#EEEEEE",
+                            "color": "#000000",
                             "url": "tools/basketball.html"
                         },
                         
@@ -32,7 +32,7 @@
                             "name": "Basketball hoops",
                             "description": "Buy our basketball hoops!",
                             "img": "assets/hoop.png",
-                            "color": "#EEEEEE",
+                            "color": "#000000",
                             "url": "tools/Basketballhoops.html"
                         },
                         {
