--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             "description": "Buy our basketball hoops!",
                             "img": "assets/hoop.png",
                             "color": "#000000",
-                            "url": "tools/Basketballhoops.html"
+                            "url": "tools/basketballhoops.html"
                         },
                         {
                             "name": "Quest Beat Saber Score converter",
