--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     "name": "Shop",
                     "pages": [
                         {
-                            "name": "Basketball",
+                            "name": "Basketball!",
                             "description": "Buy our basketballs!",
                             "img": "assets/index1.png",
                             "color": "#000000",
@@ -29,64 +29,19 @@
                         },
                         
                         {
-                            "name": "Basketball hoops",
+                            "name": "Basketball hoops!",
                             "description": "Buy our basketball hoops!",
                             "img": "assets/hoop.png",
                             "color": "#000000",
                             "url": "tools/basketballhoops.html"
                         },
                         {
-                            "name": "Quest Beat Saber Score converter",
-                            "description": "Converts scores from 1.13.2 to 1.16.4",
-                            "img": "assets/CE_512px.png",
+                            "name": "Rent a Court!",
+                            "description": "Rent a basketball court!",
+                            "img": "assets/Court.png",
                             "color": "#2F2924",
-                            "url": "tools/Beat_Saber/ScoreConverter.html"
+                            "url": "tools/rentacourt.html"
                             
-                        }
-                    ]
-                },
-                {
-                    "name": "Guides",
-                    "pages": [
-                    {
-                            "name": "Rift Downgrader",
-                            "description": "A Guide for Rift Downgrader",
-                            "img": "https://yt3.ggpht.com/ytc/AKedOLQrUa3upglNPaZkTA7dt8pzMBXBKroJZf1a0bE0fw=s900-c-k-c0x00ffffff-no-rj",
-                            "color": "#11aa22",
-                            "url": "tools/Oculus/RiftDowngraderGuide.html"
-                        },
-                        {
-                            "name": "Obtain Oculus Token",
-                            "description": "A Guide for obtaining your Oculus Token",
-                            "img": "https://yt3.ggpht.com/ytc/AKedOLQrUa3upglNPaZkTA7dt8pzMBXBKroJZf1a0bE0fw=s900-c-k-c0x00ffffff-no-rj",
-                            "color": "#11aa22",
-                            "url": "tools/Oculus/ObtainToken.html"
-                        },
-                        {
-                            "name": "APK Downgrader",
-                            "description": "A Guide for how to use APK Downgrader (APK Downgrader is outdated for Quest downgrading)",
-                            "img": "assets/CE_512px.png",
-                            "color": "#EEEEEE",
-                            "url": "tools/APK_Downgrader_Web/Guide.html"
-                        }
-                    ]
-                },
-                {
-                    "name": "Fun",
-                    "pages": [
-                        {
-                            "name": "Bouncing logo",
-                            "description": "A custom bouncing logo to fit your needs",
-                            "img": "assets/CE_512px.png",
-                            "color": "#EEEEEE",
-                            "url": "fun/BouncingLogo.html"
-                        },
-                        {
-                            "name": "Snake",
-                            "description": "Port of my private C# console snake",
-                            "img": "assets/CE_512px.png",
-                            "color": "#EEEEEE",
-                            "url": "fun/snake.html"
                         }
                     ]
                 }
