--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         {
                             "name": "Rent a Court!",
                             "description": "Rent a basketball court!",
-                            "img": "assets/Court.png",
+                            "img": "assets/rentacourt.png",
                             "color": "#2F2924",
                             "url": "tools/rentacourt.html"
                             
