--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             "name": "Rent a Court!",
                             "description": "Rent a basketball court!",
                             "img": "assets/rentacourt.png",
-                            "color": "#EEEEEE",
+                            "color": "#000000",
                             "url": "tools/rentacourt.html"
                             
                         }
