--- a/tools/basketball.html
+++ b/tools/basketball.html
@@ -9,7 +9,7 @@
                       <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
             <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
-                <div style="font-size: 24px; text-align: center;">Error 404 Page Does Not Exist</div>
+                <div style="font-size: 24px; text-align: center;">This page is under construction, please check back later.</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
      </body>
 </html>
