--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body style="background-color:#252220;">
         <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
-            <div style="flex: 1; background-color: #252220; padding: 10px; text-align: center;">
+            <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
                     
