--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <body style="background-color:#e6dfdf;">
+        <body style="background-color:#f2f2f2;">
         <script src="/js/standard.js"></script>
         <div style="padding-top: 10px; width: 100%; display: flex;">
             <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
