--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
-                    
+                <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
+                <div style="font-size: 24px; text-align: center;">Bounce</div>
+                <div id="categoryContainer" style="margin-top: 10px;">
+                
                 </div>
             </div>
         </div>
