--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Bounce Store!</title>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <link href="css/standard.css" type="text/css" rel="stylesheet">
+        <link rel="icon" href="assets/icon.png" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <body style="background-color:#f2f2f2;">
