--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <div style="font-size: 24px; text-align: center;">Bounce</div>
                 <div id="categoryContainer" style="margin-top: 10px;">
                 <div style="flex: 1; background-color: #EEEEEE; padding: 10px; text-align: center;">
-                <div style="font-size: 24px; text-align: center;">Bounce</div>
+                <div style="font-size: 24px; text-align: center;">We are bounce, we strive to make basketballs, but not just any basketball
+                our basketballs are made out of recycled materials so when you buy our basketball your not hurting the environment </div>
                 <div id="categoryContainer" style="margin-top: 10px;">
                 
                 </div>
