--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     ]
                 }
             ]
+            <img src="assets/icon.png" alt="Our Logo">
             const categoryContainer = document.getElementById("categoryContainer")
 
             pages.forEach(category => {
