--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                     ]
                 }
             ]
-            <img src="assets/icon.png" alt="Our Logo">
             const categoryContainer = document.getElementById("categoryContainer")
 
             pages.forEach(category => {
@@ -74,6 +73,7 @@
                             </div>
                         </div>`
             }
+           <img src="assets/icon.png" alt="Our Logo" width="600" height="600">
         </script>
     </body>
 </html>
