--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div style="font-size: 24px; text-align: center;">We are bounce, we strive to make basketballs, but not just any basketball
                 our basketballs are made out of recycled materials so when you buy our basketball your not hurting the environment </div>
                 <div id="categoryContainer" style="margin-top: 10px;">
+                    
                 
                 </div>
             </div>
@@ -72,6 +73,9 @@
                                 ${childs}
                             </div>
                         </div>`
+            }
+            {
+                 <img src="/assets/icon.png" alt="Our Logo" style="width:128px;height:128px;"> 
             }
         </script>
     </body>
